# hdx-scraper-dcc

./: README.md  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run.py
.config/: ruff.toml
.github/workflows/: publish.yaml  run-python-script.yaml
src/hdx/scraper/dcc/: __main__.py  dcc.py  pipeline.py
src/hdx/scraper/dcc/config/: hdx_dataset_static.yaml  project_configuration.yaml
tests/: conftest.py  test_dcc.py  test_pipeline.py
tests/fixtures/input/: readme
